--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ hr {
     margin : 40px 0;
     background-color: #e5e5e5;
 }
+/* page */
+.page {
+    overflow: hidden;
+}
 
 /* Container */
 .container {
@@ -105,12 +109,28 @@ hr {
     right: 0;
     z-index: 1000;
     padding-top: 30px;
+    z-index: 1000;
 
+}
+.header.fixed {
+    padding: 10px 0;
+    background-color: #eb8b8d;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    transform: translate3d(0, 0, 0);
+    box-shadow: 0 3px 10ppx rgba(0, 0, 0, 0.2);
+}
+
+.header.active {
+    background-color: #eb8b8d;
 }
 .header__logo {
     font-size: 30px;
     font-weight: 700;
     color : #fff;
+    cursor: pointer;
 }
 
 .header__inner {
@@ -156,11 +176,77 @@ hr {
 .nav__link:hover:after {
     opacity: 1;
 }
+/* nav toggle */
+.nav-toggle {
+    display: none;
+    position: absolute;
+    width: 30px;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+    padding: 10px 0;
+    font-size: 0;
+    color: transparent;
+    border: 0;
+    background: none;
+    cursor: pointer;
+}
+.nav-toggle:focus {
+    outline: 0;
+}
+
+.nav-toggle__item {
+    display : block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+
+    transition: background 0.2s linear;
+}
+    
+.nav-toggle__item:before,
+.nav-toggle__item:after {
+    content: "";
+    width: 100%;
+    height: 3px;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    z-index: 1;
+    transition : transform 0.2s linear;
+}
+
+.nav-toggle__item:before {
+    top: -8px;
+}
+.nav-toggle__item:after {
+    bottom: -8px;
+}
+.nav-toggle.active .nav-toggle__item{
+    background: none;
+}
+.nav-toggle.active .nav-toggle__item:before {
+    transform-origin: left top;
+    transform: rotate(45deg)
+    translate3d(0px, -2px , 0);
+}
+.nav-toggle.active .nav-toggle__item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg)
+    translate3d(0px, 3px , 0);
+}
 
 /* Section */
 
 .section {
     padding : 80px 0;
+    overflow: hidden;
 }
 .section--devices {
     padding-bottom: 0;
@@ -213,12 +299,14 @@ hr {
 /* card */
 
 .card {
-    margin-top: 80px;
+    margin: 80px -15px 0;
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .card__item {
-    width: 380px;
+    width: 33.33333%;
+    padding: 0 15px;
 }
 .card__inner {
     position: relative;
@@ -241,6 +329,8 @@ hr {
 }
 .card__img img{
     display:block;
+    max-width: 100%;
+    height: auto;
     transition: opacity 0.2s linear;
 }
 .card__text {
@@ -281,6 +371,7 @@ hr {
 }
 .stat {
     display : flex;
+    flex-wrap: wrap;
 }
 .stat__item {
     flex : 1 1 0;
@@ -307,14 +398,18 @@ hr {
 
 .services {
     display : flex;
+    flex-wrap: wrap;
     font-family: 'Roboto' , sans-serif;
 }
 .service__item {
-    flex : 1 1 0;
-
-    padding-left: 70px;
-    padding-right: 20px;
+    width: 33.33333%;
+    flex-wrap: wrap;
+    padding: 0 35px 40px 85px;
     position: relative;
+    margin-bottom: 40px;
+}
+.service__item--border {
+    border-bottom: 1px solid #e5e5e5;
 }
 .services__icon {
     position : absolute;
@@ -342,6 +437,8 @@ hr {
 }
 .devices__item {
     display : block;
+    max-width: 100%;
+    height: auto;
 }
 
 .devices__item--iphone{
@@ -355,9 +452,17 @@ hr {
 /* We do */
 .weDo {
     display : flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 .weDo__item {
     width: 50%;
+    padding: 0 15px;
+}
+.wedo__img {
+    display:block;
+    max-width: 100%;
+    height: auto;
 }
 
 /* accordion */
@@ -425,6 +530,9 @@ hr {
     position: relative;
 }
 .reviews__img {
+    display : block;
+    width: 210px;
+    height: 210px;
     border-radius: 50%;
     position: absolute;
     top:0;
@@ -483,8 +591,16 @@ hr {
 .logos {
     display : flex;
     justify-content: space-between;
-    flex-wrap: wrap;
     align-items: center;
+    margin: 0 -15px;
+}
+.logos__item {
+    padding: 0 15px;
+}
+.logos__img {
+    display : block;
+    max-width: 100%;
+    height: auto;
 }
 
 /* works */
@@ -589,6 +705,7 @@ hr {
 /* blog */
 .blog {
     display : flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 .blog__item {
@@ -698,7 +815,12 @@ hr {
 .footer__inner {
     padding-bottom: 65px;
     display : flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0 -15px;
+}
+.footer__col {
+    padding: 0 15px;
 }
 .footer__col--first {
     width: 40%;
@@ -790,11 +912,13 @@ hr {
     justify-content: space-between;
 }
 .instagram__item {
-    width: 32%;
+    width: 33%;
     border-bottom: 1px solid #fff;
 }
 .instagram__item img {
     display : block;
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -858,4 +982,327 @@ hr {
 }
 .copyright span {
     color : #f38181;
+}
+
+
+
+/* media */
+
+@media (max-width: 1230px) {
+    
+    /* intro */
+    .intro__suptitle {
+        font-size: 52px;
+    }
+    .intro__title {
+        font-size: 120px;
+    }
+
+    /* rewiews */
+    .reviews__text {
+        font-size: 20px;
+    }
+   
+  
+}
+
+@media (max-width: 990px) {
+
+    /* intro */
+    .intro__suptitle {
+        font-size: 32px;
+    }
+    .intro__title {
+        font-size: 80px;
+    }
+    /* stat */
+    .stat {
+        justify-content: center;
+    }
+    .stat__item {
+        flex: none;
+        width: 33.33333%;
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        border: 0;
+    }
+    .stat__item:last-child {
+        border-right: 0;
+    }
+
+    /* secvices */
+
+    .service__item {
+        width: 50%;
+        padding-bottom: 0;
+    }
+    .service__item--border {
+        border-bottom: 0;
+    }
+    /* reviews */
+    .reviews__text {
+        padding: 0 60px;
+    }
+    .reviews__img {
+        height: 150px;
+        width: 150px;
+    }
+    .reviews__item {
+        padding-left: 175px;
+    }
+
+    /* clients */
+    .clients {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+    .clients__item {
+        width: 100%;
+        padding-right: 0;
+    }
+    .clients__item:last-child {
+        margin-bottom: 0;
+    }
+
+    /* footer */
+    .footer__col--first {
+        width: 100%;
+    }
+    .footer__col--second,
+    .footer__col--third {
+        width: 50%;
+    }
+    /* instagram */
+    .instagram {
+        justify-content: flex-start;
+    }
+    .instagram__item {
+        width: auto;
+        border-right: 1px solid #fff;
+    }
+
+    
+}
+
+@media (max-width: 770px) {
+    /* header */
+    .header {
+        padding: 10px 0;
+    }
+    /* intro */
+    .intro {
+        min-height: 650px;
+    }
+    /* nav */
+    .nav {
+        display : none;
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #eb8b8d;
+    }
+    .nav.active {
+        display : block;
+    }
+    .nav__link {
+        display: block;
+        margin: 0;
+        padding: 8px 20px;
+    }
+    .nav-toggle {
+        display: block;
+    }
+
+    /* section */
+    .section {
+        padding: 40px 0;
+    }
+    .section--devices {
+        padding-bottom: 40px 0;
+    }
+
+    /* card */
+    .card {
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .card__item {
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+    }
+    .card__item:last-child {
+        margin-bottom: 0;
+    }
+    /* secvices */
+    .services {
+        justify-content: center;
+    }
+
+    .service__item {
+        width: 100%;
+        max-width: 400px;
+        padding-left: 55px;
+        padding-right: 0;
+    }
+
+    .services__icon {
+        left: 0;
+    }
+
+    /* we do */
+    .wedo__img {
+        display : none;
+    }
+    .weDo__item {
+        width: 100%;
+    }
+
+    /* reviews */
+    .reviews__img {
+        position: static;
+        margin: 0 auto 20px;
+    }
+    .reviews__item {
+        padding-left: 0;
+    }
+    .reviews__text {
+        font-size: 16px;
+    }
+    .reviews__author {
+        font-size: 20px;
+    }
+
+    /* works */
+    .works {
+        flex-wrap: wrap;
+    }
+    .works__col {
+        width: 50%;
+        flex: none;
+    }
+    /* blog */
+    .blog {
+        max-width: 380px;
+        margin: 0 auto;
+    }   
+    .blog__item {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .blog__item:last-child {
+        margin-bottom: 0;
+    }
+    /* footer */
+    .footer__col--second,
+    .footer__col--third {
+        width: 100%;
+    }
+}
+
+@media (max-width: 575px) {
+
+    /* intro */
+
+    .intro__suptitle {
+        font-size: 22px;
+    }
+    .intro__title {
+        font-size: 40px;
+    }
+
+    /* section */
+    .section__title {
+        font-size: 24px;
+    }
+    .section__suptitle {
+        font-size: 20px;
+    }
+    .section__title:after {
+        margin: 20px auto;
+    }
+    .section__header {
+        margin-bottom: 50px;
+    }
+
+    /* stat */
+    .stat__item {
+        width: 100%;
+        border-bottom: 1px solid #b5eae0;
+    }
+    .stat__item:last-child {
+        border-bottom: 0;
+    }
+    .stat__number {
+        font-size: 52px;
+    }
+
+    /* devices */ 
+    .devices {
+        max-width: 320px;
+    }
+    .devices__item--iphone {
+        width: 180px;
+        bottom: -50px;
+        right: -80px;
+    }
+
+    /* reviews */ 
+    .reviews {
+        padding : 0;
+    }
+
+    /* logos */
+    .logos {
+        flex-wrap: wrap;
+    }
+    .logos__item {
+        width: 50%;
+        margin-bottom: 20px;
+    }
+    .logos__img {
+        margin: 0 auto;
+    }
+    /* works */
+    .works__col {
+        width: 100%;
+    }
+
+    /* clients */
+    .clients__photo {
+        position: static;
+    }
+    .clients__item {
+        padding-left: 0;
+        text-align: center;
+    }
+    .clients__text:before {
+        margin: 15px auto;
+    }
+    /* blogs */
+    .blogs__img {
+        width: 80px;
+        height: 50px;
+    }
+    .blogs__title {
+        font-size: 10px;
+    }
+
+
+    /* subscribe */
+    .subscribe {
+        flex-wrap: wrap;
+        max-width: none;
+    }
+    .subscribe__input {
+        width: 100%;
+        margin-bottom: 10px;
+        border-right: 1px solid #e7e7e7;
+    }
+    .subscribe__btn {
+        width: 100%;
+    }
+
 }
